--- a/src/App.css
+++ b/src/App.css
@@ -13,4 +13,29 @@
   border-radius: 20px;
 }
 
+nav {
+  position: fixed; 
+  top: 0; 
+  right: 0; 
+}
 
+.home-link 
+{
+  border:1px dotted white;
+  width:75px;
+}
+
+.website{
+  padding: 10px;
+  text-decoration: none;
+  color: black;
+}
+
+.website:hover{
+  cursor: pointer;
+  color: brown;
+}
+
+.type{
+  padding: 10px;
+}
